--- a/webspatial-client/package.json
+++ b/webspatial-client/package.json
@@ -16,7 +16,9 @@
     "@webspatial/react-sdk": "^1.0.4",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "three": "^0.172.0"
+    "three": "^0.172.0",
+    "@react-three/xr": "^5.2.1",
+    "webxr-polyfill": "^2.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
@@ -30,6 +32,7 @@
     "globals": "^16.5.0",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.3",
-    "vite": "^7.2.2"
+    "vite": "^7.2.2",
+    "@types/webxr": "^0.5.20"
   }
 }
