--- a/backend/.env.example
+++ b/backend/.env.example
@@ -7,3 +7,9 @@ OPENAI_API_KEY=
 
 # Server Port Configuration
 PORT=3001
+
+# Optional CORS overrides for local network / remote clients
+# Comma separated list of allowed origins (e.g. http://192.168.1.50:5173)
+ALLOWED_ORIGINS=
+# Set to true to mirror any Origin header (only for trusted dev networks)
+CORS_ALLOW_ALL=false
