--- a/webspatial-client/package.json
+++ b/webspatial-client/package.json
@@ -12,12 +12,13 @@
   "dependencies": {
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.4.0",
+    "@react-three/xr": "^5.7.1",
     "@types/three": "^0.181.0",
     "@webspatial/react-sdk": "^1.0.4",
+    "@webxr-input-profiles/motion-controllers": "^1.0.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "three": "^0.172.0",
-    "@react-three/xr": "^5.2.1",
+    "three": "^0.181.1",
     "webxr-polyfill": "^2.0.3"
   },
   "devDependencies": {
@@ -25,6 +26,7 @@
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
+    "@types/webxr": "^0.5.20",
     "@vitejs/plugin-react": "^5.1.0",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
@@ -32,7 +34,6 @@
     "globals": "^16.5.0",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.3",
-    "vite": "^7.2.2",
-    "@types/webxr": "^0.5.20"
+    "vite": "^7.2.2"
   }
 }
